# brainfuck

./: .gitignore  CMakeLists.txt
inc/: brainfuck.hpp  virtual_machine.hpp
src/: brainfuck.cpp
